Possible whitespace fix

--- a/src/components/css/_index.scss
+++ b/src/components/css/_index.scss
@@ -4,7 +4,6 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden !important;
-    height: 100vh;
 }
 
 body {
